NEXT-2687 - Fix media-upload in categories

--- a/Resources/administration/src/module/sw-category/component/sw-category-view/sw-category-view.html.twig
+++ b/Resources/administration/src/module/sw-category/component/sw-category-view/sw-category-view.html.twig
@@ -33,7 +33,11 @@
                 v-if="!isLoading"
                 :category="category"
                 :mediaItem="mediaItem"
-                :isLoading="isLoading">
+                :isLoading="isLoading"
+                @sw-category-base-on-open-sidebar="openSidebar"
+                @sw-category-base-on-set-media="setMediaItem"
+                @sw-category-base-on-upload-media="onUploadAdded"
+                @sw-category-base-on-remove-media="onUnlinkLogo">
             </router-view>
         {% endblock %}
 
