--- a/Resources/administration/src/module/sw-cms/component/sw-cms-layout-modal/sw-cms-layout-modal.html.twig
+++ b/Resources/administration/src/module/sw-cms/component/sw-cms-layout-modal/sw-cms-layout-modal.html.twig
@@ -1,5 +1,5 @@
 {% block sw_cms_layout_modal %}
-    <sw-modal class="sw-cms-layout-modal" v-if="isOpen" @closeModal="closeModal" :title="$tc('sw-cms.components.cmsLayoutModal.modalTitle')">
+    <sw-modal class="sw-cms-layout-modal" @closeModal="closeModal" :title="$tc('sw-cms.components.cmsLayoutModal.modalTitle')">
 
         {% block sw_cms_layout_modal_header %}
             <div class="sw-cms-layout-modal__header">
@@ -36,7 +36,7 @@
                                 {% block sw_cms_layout_modal_content_listing_item %}
 
                                     {% block sw_cms_layout_modal_content_listing_item_checkbox %}
-                                        <sw-checkbox-field :value="cmsPage.id === selected" type="checkbox"></sw-checkbox-field>
+                                        <sw-checkbox-field @input="onSelection(cmsPage.id)" :value="cmsPage.id === selected" type="checkbox"></sw-checkbox-field>
                                     {% endblock %}
 
                                     {% block sw_cms_layout_modal_content_listing_item_inner %}
