NTR - Fix modal transition for vue version 2.6.9

--- a/Resources/administration/src/app/component/base/sw-modal/sw-modal.html.twig
+++ b/Resources/administration/src/app/component/base/sw-modal/sw-modal.html.twig
@@ -1,5 +1,5 @@
 {% block sw_modal %}
-    <transition name="sw-modal-fade">
+    <transition name="sw-modal-fade" appear>
         {% block sw_modal_element %}
             <div class="sw-modal" :class="modalClasses" @mousedown="closeModalOnClickOutside" @keyup.esc="closeModalOnEscapeKey">
                 {% block sw_modal_dialog %}
