--- a/Resources/administration/src/module/sw-cms/component/sw-cms-list-item/sw-cms-list-item.scss
+++ b/Resources/administration/src/module/sw-cms/component/sw-cms-list-item/sw-cms-list-item.scss
@@ -9,7 +9,8 @@
     border-radius: 4px;
 
     &:hover {
-        box-shadow: 0 0 4px 0 $color-shopware-blue;
+        border-color: $color-shopware-blue;
+        box-shadow: 0 0 4px 0 rgba($color-shopware-blue, 0.4);
         cursor: pointer;
     }
 
