--- a/Resources/administration/src/module/sw-cms/component/sw-cms-layout-modal/sw-cms-layout-modal.scss
+++ b/Resources/administration/src/module/sw-cms/component/sw-cms-layout-modal/sw-cms-layout-modal.scss
@@ -55,6 +55,7 @@
             display: flex;
             flex-direction: column;
             overflow: hidden;
+            height: 520px;
         }
     }
 }
