NEXT-2275 - Refactor single select placeholder option

--- a/Resources/administration/src/app/component/base/sw-card/sw-card.scss
+++ b/Resources/administration/src/app/component/base/sw-card/sw-card.scss
@@ -108,7 +108,7 @@ $sw-card-color-background-toolbar:			$color-light-gray;
         }
     }
 
-	.sw-card__header {
+	.sw-card__toolbar {
 		padding: 30px;
 		background-color: $sw-card-color-background-toolbar;
 		border: 1px solid $sw-card-color-border;
