--- a/Resources/administration/src/app/component/base/sw-card/sw-card.html.twig
+++ b/Resources/administration/src/app/component/base/sw-card/sw-card.html.twig
@@ -6,10 +6,10 @@
 
         <slot name="tabs"></slot>
 
-        {% block sw_card_header %}
-            <div class="sw-card__header"
+        {% block sw_card_toolbar %}
+            <div class="sw-card__toolbar"
                  v-if="!!$slots.toolbar">
-                {% block sw_card_header_inner %}
+                {% block sw_card_toolbar_inner %}
                     <slot name="toolbar">
                         {% block sw_card_slot_toolbar %}{% endblock %}
                     </slot>
